common data from datacreator

--- a/Diagnosis/Controls/Forms/PropertiesChooser.xaml
+++ b/Diagnosis/Controls/Forms/PropertiesChooser.xaml
@@ -9,7 +9,7 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.DataContext>
         <ObjectDataProvider
-                          MethodName="CreateProperties"
+                          MethodName="GetProperties"
                           ObjectType="{x:Type local:DataCreator}" />
     </UserControl.DataContext>
     <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
