--- a/Diagnosis/Screens/Card2.xaml
+++ b/Diagnosis/Screens/Card2.xaml
@@ -4,9 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:Diagnosis.Controls"
+             xmlns:conv="clr-namespace:Diagnosis.Converters"
              mc:Ignorable="d"
              d:DesignHeight="400" d:DesignWidth="600">
     <UserControl.Resources>
+        <conv:AgeToYearsLabel x:Key="ageLabel" />
         <Style x:Key="tabHeaderSpecial" TargetType="{x:Type TabItem}">
             <Setter Property="IsEnabled" Value="False" />
             <Setter Property="Template">
@@ -59,7 +61,11 @@
                             <TextBlock Text="{Binding FirstName[0]}" />.
                             <TextBlock Text="{Binding MiddleName[0]}" />.
                         </TextBlock>
-                        <TextBlock Text="{Binding Age, StringFormat='{}{0} лет'}"></TextBlock>
+                        <TextBlock>
+                            <TextBlock Text="{Binding Age}" />
+                            <TextBlock Text="{Binding Age, Converter={StaticResource ageLabel}}"></TextBlock>                            
+                        </TextBlock>
+                       
                     </StackPanel>
                 </TabItem.Header>
             </TabItem>
