--- a/Diagnosis/Controls/GroupsTree.xaml
+++ b/Diagnosis/Controls/GroupsTree.xaml
@@ -25,8 +25,8 @@
             </Style>
 
             <HierarchicalDataTemplate
-                x:Key="fullTreeItemTemplate"
-                ItemsSource="{Binding NonTerminalChildren, Mode=OneTime}">
+                x:Key="groupTreeItemTemplate"
+                ItemsSource="{Binding NonTerminalChildren}">
                 <controls:TreeItem />
             </HierarchicalDataTemplate>
         </ResourceDictionary>
@@ -49,7 +49,7 @@
             Grid.Row="1"
             HorizontalContentAlignment="Stretch"
             ItemContainerStyle="{StaticResource fullTreeItemStyle}"
-            ItemTemplate="{StaticResource fullTreeItemTemplate}"
+            ItemTemplate="{StaticResource groupTreeItemTemplate}"
             ItemsSource="{Binding}"
             Loaded="TreeView_Loaded">
         </TreeView>
