--- a/Diagnosis/Controls/TileItem.xaml
+++ b/Diagnosis/Controls/TileItem.xaml
@@ -115,6 +115,12 @@
                         >
                     +
                 </Button>
+                <Button x:Name="delete" 
+                        Click="delete_Click"
+                        Height="20"
+                        >
+                    x
+                </Button>
             </StackPanel>
         </Grid>
     </Border>
