move CheckSelectedItem from Search to Symptom VM

--- a/Diagnosis/Controls/FloatSearch.xaml
+++ b/Diagnosis/Controls/FloatSearch.xaml
@@ -3,7 +3,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:h="clr-namespace:Diagnosis.Helpers"
-             xmlns:Converters="clr-namespace:Diagnosis.Converters" x:Class="Diagnosis.Controls.FloatSearch"
+             xmlns:Converters="clr-namespace:Diagnosis.Converters" 
+             x:Class="Diagnosis.Controls.FloatSearch"
              mc:Ignorable="d"
              d:DesignHeight="100" d:DesignWidth="300"
              x:Name="floatSearch"
