--- a/Diagnosis/App.xaml
+++ b/Diagnosis/App.xaml
@@ -10,7 +10,7 @@
         
         <vm:PatientViewModel x:Key="patientVM" />
         <vm:SymptomViewModel x:Key="symptomVM" />
-        <vm:SearchViewModel x:Key="searchVM" />
+        <vm:SymptomSearchViewModel x:Key="searchVM" />
         <vm:SymptomExplorerViewModel x:Key="symptomExplorerVM" />
 
         <Style TargetType="TextBlock" x:Key="watermark">
