move search logic from controls to ViewModels

--- a/Diagnosis/Controls/Directory/TileItem.xaml
+++ b/Diagnosis/Controls/Directory/TileItem.xaml
@@ -98,6 +98,7 @@
                         Grid.ColumnSpan="2"
                         Visibility="Collapsed"
                         KeyUp="search_KeyUp"
+                                  DataContext="{Binding Search}"
 
  />
 
