--- a/Diagnosis/Screens/Patients.xaml
+++ b/Diagnosis/Screens/Patients.xaml
@@ -3,12 +3,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:controls="clr-namespace:Diagnosis.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <controls:FloatSearch x:Name="search" DataContext="{Binding Search}" />
+        
         <ListBox x:Name="patients"
                  ItemsSource="{Binding Patients}"
-                 SelectedIndex="{Binding CurrentPatientIndex}">
+                 SelectedIndex="{Binding CurrentPatientIndex}" 
+                 Grid.Row="1">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <DockPanel>
