--- a/Diagnosis/Controls/FloatSearch.xaml
+++ b/Diagnosis/Controls/FloatSearch.xaml
@@ -2,15 +2,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:h="clr-namespace:Diagnosis.Helpers"
              xmlns:Converters="clr-namespace:Diagnosis.Converters"
+             xmlns:controls="clr-namespace:Diagnosis.Controls"
              x:Class="Diagnosis.Controls.FloatSearch"
              mc:Ignorable="d"
              d:DesignHeight="100" d:DesignWidth="300"
              x:Name="floatSearch"
              GotFocus="UserControl_GotFocus"
              KeyUp="floatSearch_KeyUp"
-             h:EnhancedFocusScope.IsEnhancedFocusScope="True">
+             controls:EnhancedFocusScope.IsEnhancedFocusScope="True">
     <UserControl.Resources>
         <Converters:CountToVisability x:Key="CountToVisability" />
     </UserControl.Resources>
